Fri Nov  8 09:49:09 1996  Tom Tromey  <tromey@cygnus.com>

	* m4/init.m4: Run AM_SANITY_CHECK.

	* m4/sanity.m4: New file.

	* automake.in (handle_dist_worker): In Cygnus mode, possibly find
	files to dist in build dir, not srcdir.
	(%omit_dependencies): New global.
	(scan_dependency_file): Handle OMIT_DEPENDENCIES.
	(scan_configure): Put rx.h, regex.h on %omit_dependencies.  Ditto
	libintl.h.
	(handle_tests): Remove CYGNUS strings in Cygnus mode.
	(handle_texinfo): Ditto.

	* texinfos.am (dist-info): New target.

	* automake.in (handle_dist_worker): Use DISTFILES, not
	DEP_DISTFILES.
	(initialize_per_input): Initialize dist_targets.
	(handle_texinfo): Don't compute @infos_list; don't define or use
	INFOS.  Put dist-info onto @dist_targets.
	(handle_dist_worker): Handle @dist_targets.  Don't use the "echo
	trick" for expanding DISTFILES any more.

	* dist-vars.am (DEP_DISTFILES): Removed.
	(DISTFILES): Don't include INFOS.

	* automake.in (handle_texinfo): Handle Cygnus mode.
	* texinfos.am (.texi.info, .texinfo.info): Handle Cygnus mode.

	* automake.in (handle_single_transform_list): New sub.
	(handle_source_transform): Use it.
	(handle_built_sources): New sub.

Thu Nov  7 14:49:16 1996  Tom Tromey  <tromey@cygnus.com>

	* remake.am ($(srcdir)/Makefile.in): Pass @ARGS@ to automake.
	* remake-subd.am ($(srcdir)/Makefile.in): Pass @ARGS@ to
	automake.
	* automake.in (handle_configure): Pass --cygnus when running
	automake again.

	* remake-hdr.am ($(srcdir)/stamp-h.in): Depend on @FILES@, not
	ACCONFIG, CONFIG_TOP, CONFIG_BOT.
	* automake.in (handle_aclocal_m4): Always find aclocal.m4 in
	top_srcdir.
	(handle_configure): Don't define ACCONFIG, CONFIG_TOP, CONFIG_BOT;
	instead substitute files directly.

Wed Nov  6 10:22:26 1996  Tom Tromey  <tromey@cygnus.com>

	* remake-hdr.am (stamp-h): Look in top_builddir for
	config.status.
	($(srcdir)/stamp-h.in): Look in top_srcdir for configure.in.

Thu Oct 31 10:55:59 1996  Tom Tromey  <tromey@cygnus.com>
