@@ -3,9 +3,6 @@ AC_INIT(automake.in)
 
 AM_INIT_AUTOMAKE(automake, 1.1g)
 
-AC_PROG_MAKE_SET
-AC_ARG_PROGRAM
-
 AC_PATH_PROG(PERL, perl)
 if test -z "$PERL"; then
    echo "fatal error: perl not found" 1>&2
