@@ -7,12 +7,12 @@ AC_DEFUN(AM_SANITY_CHECK,
 echo timestamp > conftestfile
 # Do this in a subshell so we don't clobber the current shell's
 # arguments.  FIXME: maybe try `-L' hack like GETLOADAVG test?
-if (set X `ls -t $srcdir/configure conftestfile`; test "$2" = conftestfile)
+if (set X `ls -t $srcdir/configure conftestfile`; test "[$]2" = conftestfile)
 then
    # Ok.
    :
 else
-   AC_MSG_ERROR([configuration problem: newly created file is older than distributed files!
+   AC_MSG_ERROR([newly created file is older than distributed files!
 Check your system clock])
 fi
 rm -f conftest*
