@@ -1,5 +1,7 @@
 Fri Nov  8 09:49:09 1996  Tom Tromey  <tromey@cygnus.com>
 
+	* configure.in: Don't run AC_ARG_PROGRAM, AC_PROG_MAKE_SET.
+
 	* m4/init.m4: Run AM_SANITY_CHECK.
 
 	* m4/sanity.m4: New file.
